@@ -14,7 +14,7 @@ prefix = profiles/github
 ;[Test::Kwalitee]
 ;[Test::Kwalitee::Extra]
 
-[Prereqs / PluginBundle]
+[Prereqs / PluginBundle (direct)]
 -phase = runtime
 -relationship = requires
 Dist::Zilla::Plugin::Git::NextVersion = 0
@@ -57,7 +57,6 @@ Dist::Zilla::Plugin::NextRelease = 4.300018
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::MakeMaker = 0
 Dist::Zilla::Plugin::InstallGuide = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
@@ -86,6 +85,12 @@ Pod::Weaver::Plugin::Encoding = 0
 Text::Tabs = 2013.0426
 Test::Spelling = 0.19
 Test::Vars = 0.004
+
+[Prereqs / PluginBundle (indirect, optional)]
+-phase = runtime
+-relationship = recommends
+Dist::Zilla::Plugin::MakeMaker = 0
+Dist::Zilla::Plugin::ModuleBuildTiny = 0
 
 [Prereqs / MintingProfile]
 -phase = runtime
