@@ -7,6 +7,8 @@ Revision history for {{$dist->name}}
               and now fails, rather than not compiling
             - main module now avoids the list transformer where it breaks pod
               coverage tests; includes more template pod
+          - config option added for changing the installer backend (still
+            defaults to MakeMaker, for now)
 
 0.006     2013-05-10 17:06:41 PDT-0700 (Karen Etheridge)
           - support dropped for directly passing stopwords via a mvp argument
